# thin

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cli.rs  fix.rs  json.rs  lib.rs  main.rs  profile.rs  render.rs  tokenize.rs
src/rules/: ai_phrase.rs  corporate.rs  em_dash.rs  empty_adjective.rs  filler_opener.rs  filler_verb.rs  length.rs  mod.rs  parallel.rs  passive.rs  redundancy.rs
tests/: cli.rs  fix.rs  integration.rs  rules_main.rs
tests/fixtures/: ai-generated-readme.md  clean-readme.md  corporate.md  mixed.md
tests/rules/: ai_phrase.rs  corporate.rs  em_dash.rs  empty_adjective.rs  filler_verb.rs  length.rs  parallel.rs  redundancy.rs
